--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<link rel="stylesheet" href="css/animate.css">
 	<link href="css/animate.min.css" rel="stylesheet"> 
 	<link href="css/style.css" rel="stylesheet" />	
-	.full { background-color: white; width: 100%; height: 100%; }
+	full { background-color: white; width: 100%; height: 100%; }
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -143,7 +143,7 @@
 				</div>
 		
 				<div class="col-md-6 col-sm-6 col-xs-6">
-					<div class="btn-gamp"><a href="service.html">Learn More</a></div>
+					<div class="btn-gamp"><a href="services.html">Learn More</a></div>
 				</div>
 				<div class="col-md-6 col-sm-6 col-xs-6">
 					<div class="gamp-btn"><a href="contact.html">Contact Us</a></div>
@@ -158,27 +158,27 @@
 		<div class = id "mission">
 		<div class="container">
 			<div class="text-center">
-				<h2>consectetur adipisicing elit</h2>
+				<h2>Our Strengths</h2>
 			</div>
 			<div class="col-md-3 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="300ms">
 				<i class="fa fa-heart-o"></i>
 				<h3>Fully Responsive</h3>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum nam numquam voluptates cumque inventore, quibusdam corporis consequatur amet.</p>
+				<p>We work closely with our clients to understand their needs. We are always a phone call way before, during, and after any project.</p>
 			</div>
 			<div class="col-md-3 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="600ms">
 				<i class="fa fa-cloud"></i>
-				<h3>Retina Ready</h3>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum nam numquam voluptates cumque inventore, quibusdam corporis consequatur amet.</p>
+				<h3>Innovative and Experienced</h3>
+				<p>We strive to keep our team and our tech as modern as possible while balancing the needed reverance for experience and traditional approaches.</p>
 			</div>
 			<div class="col-md-3 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="900ms">
 				<i class="fa fa-book"></i>	
-				<h3>Fresh and Clean</h3>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum nam numquam voluptates cumque inventore, quibusdam corporis consequatur amet.</p>
+				<h3>Lean</h3>
+				<p>We don't want to waste our time and certainly not yours so we strive to provide solutions that are to the point, reasonable, and nothing excessive.</p>
 			</div>
 			<div class="col-md-3 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="1200ms">
 				<i class="fa fa-gear"></i>	
 				<h3>Easy to Customize</h3>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum nam numquam voluptates cumque inventore, quibusdam corporis consequatur amet.</p>
+				<p>We are experts in tailoring our skills and services to our needs. Whatever tricky situation you may be in, we can find a solution that works for you.</p>
 			</div>
 		</div>
 		</div>			
@@ -263,18 +263,17 @@
 	<footer>
 		<div class="container">
 			<div class="col-md-4 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="300ms">
-				<h4>About Us</h4>
-				<p>Day is tellus ac cursus commodo, mauesris condime ntum nibh, ut fermentum mas justo sitters.</p>						
+				<h4>Contact Us</h4>					
 				<div class="contact-info">
 					<ul>
-						<li><i class="fa fa-home fa"></i>Suite 54 Elizebth Street, Victoria State Newyork, USA </li>
-						<li><i class="fa fa-phone fa"></i> +38 000 129900</li>
-						<li><i class="fa fa-envelope fa"></i> info@domain.net</li>
+						<li><i class="fa fa-home fa"></i>Boston, MA | San Jose, Costa Rica</li>
+						<li><i class="fa fa-phone fa"></i> +1 617 470 7125</li>
+						<li><i class="fa fa-envelope fa"></i> rrojas@rgbconsultinggroup.com</li>
 					</ul>
 				</div>
 			</div>
-			
-			<div class="col-md-4 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="600ms">				
+		</div>
+			<!--<div class="col-md-4 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="600ms">				
 				<div class="text-center">
 					<h4>Photo Gallery</h4>
 					<ul class="sidebar-gallery">
@@ -301,7 +300,7 @@
 				
 			</div>
 			
-		</div>	
+		</div>	-->
 	</footer>
 	
 	<div class="sub-footer">
@@ -318,10 +317,6 @@
 				</div>
 			</div>
 			
-			<div class="col-md-4 col-md-offset-4">
-				<div class="copyright">
-					&copy; Day 2015 by <a target="_blank" href="http://bootstraptaste.com/" title="Free Twitter Bootstrap WordPress Themes and HTML templates">Bootstrap Themes</a>.All Rights Reserved.
-				</div>
                 <!-- 
                     All links in the footer should remain intact. 
                     Licenseing information is available at: http://bootstraptaste.com/license/
