--- a/services.html
+++ b/services.html
@@ -55,68 +55,67 @@
 			<div class="text-center">
 				<h2>consectetur adipisicing elit</h2>			
 				<div class="col-md-3 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="300ms">
-					<i class="fa fa-heart-o"></i>
-					<h3>Fully Responsive</h3>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum nam numquam voluptates cumque inventore, quibusdam corporis consequatur amet.</p>
+					<i class="fa fa-code-fork"></i>
+					<h3>Process Improvement</h3>
+					<p>We are experts in process mapping. By breaking down business and manufacturing processes into tiny pieces, we then rebuild and reengineer in order to improve effiency and cost.</p>
 				</div>
 				<div class="col-md-3 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="600ms">
-					<i class="fa fa-cloud"></i>
-					<h3>Retina Ready</h3>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum nam numquam voluptates cumque inventore, quibusdam corporis consequatur amet.</p>
+					<i class="fa fa-random"></i>
+					<h3>Lean Six Sigma</h3>
+					<p>The main driver of process efficiency, Lean Six Sigma methodologies are proven to drive down costs, reduce waste, and increase overall productivity. By developing a strict set of KPI’s and process improvement measures, businesses enhance their margins by applying our skill set in this field.</p>
 				</div>
 				<div class="col-md-3 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="900ms">
-					<i class="fa fa-book"></i>	
-					<h3>Fresh and Clean</h3>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum nam numquam voluptates cumque inventore, quibusdam corporis consequatur amet.</p>
+					<i class="fa fa-computer"></i>	
+					<h3>Custom Software</h3>
+					<p>From idea to fruition, we help guide clients every step of the way in working towards a common goal, custom software delivers solutions for needs and unexplored areas of your business which could benefit from implementation.</p>
 				</div>
 				<div class="col-md-3 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="1200ms">
-					<i class="fa fa-gear"></i>	
-					<h3>Easy to Customize</h3>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum nam numquam voluptates cumque inventore, quibusdam corporis consequatur amet.</p>
+					<i class="fa fa-bar-chart"></i>	
+					<h3>Data Visualization</h3>
+					<p>From data collection to visualization and analysis, we can unearth insights that lead to better decision making and more efficient business strategies. Using tools such as Tableau and Alteryx, we can understand where your business thrives and properly focus those metrics for you.</p>
 				</div>
 			</div>
 		</div>
 		<div class="text-center">
 			<div class="container">			
 				<div class="col-md-3 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="300ms">
-					<i class="fa fa-heart-o"></i>
-					<h3>Fully Responsive</h3>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum nam numquam voluptates cumque inventore, quibusdam corporis consequatur amet.</p>
+					<i class="fa fa-address-book"></i>
+					<h3>Logistics and Supply Chain</h3>
+					<p>Customer fulfillment, shipping, distributors, and supply management can be an intricate and complicated process.  We can handle all aspects of your supply chain so that you can focus on business growth.</p>
 				</div>
 				<div class="col-md-3 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="600ms">
-					<i class="fa fa-cloud"></i>
-					<h3>Retina Ready</h3>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum nam numquam voluptates cumque inventore, quibusdam corporis consequatur amet.</p>
+					<i class="fa fa-database"></i>
+					<h3>Electronic Document Management and Transfer</h3>
+					<p>Turning hard copies and printed paper into digital form is a non-value added activity. Managing large Excel files that slow down your computer should not be part of your day to day activities. We will handle all electronic document management through organizing and streamlining data and communications flow.</p>
 				</div>
 				<div class="col-md-3 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="900ms">
-					<i class="fa fa-book"></i>	
-					<h3>Fresh and Clean</h3>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum nam numquam voluptates cumque inventore, quibusdam corporis consequatur amet.</p>
+					<i class="fa fa-car"></i>	
+					<h3>Automation</h3>
+					<p>We have a team of engineers readily available to turn any process done by hand to a process done by machine, which can save you thousands.</p>
 				</div>
 				<div class="col-md-3 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="1200ms">
-					<i class="fa fa-gear"></i>	
-					<h3>Easy to Customize</h3>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum nam numquam voluptates cumque inventore, quibusdam corporis consequatur amet.</p>
+					<i class="fa fa-thumbs-up"></i>	
+					<h3>More Services Coming!</h3>
+					<p>We are always looking to expand and improve our services so if there's something you want us to, give us a call and we'll let you know if we are working on it!</p>
 				</div>
 			</div>
 		</div>
 	</div>	
 	
-	<footer>
+<footer>
 		<div class="container">
 			<div class="col-md-4 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="300ms">
-				<h4>About Us</h4>
-				<p>Day is tellus ac cursus commodo, mauesris condime ntum nibh, ut fermentum mas justo sitters.</p>						
+				<h4>Contact Us</h4>					
 				<div class="contact-info">
 					<ul>
-						<li><i class="fa fa-home fa"></i>Suite 54 Elizebth Street, Victoria State Newyork, USA </li>
-						<li><i class="fa fa-phone fa"></i> +38 000 129900</li>
-						<li><i class="fa fa-envelope fa"></i> info@domain.net</li>
+						<li><i class="fa fa-home fa"></i>Boston, MA | San Jose, Costa Rica</li>
+						<li><i class="fa fa-phone fa"></i> +1 617 470 7125</li>
+						<li><i class="fa fa-envelope fa"></i> rrojas@rgbconsultinggroup.com</li>
 					</ul>
 				</div>
 			</div>
-			
-			<div class="col-md-4 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="600ms">				
+		</div>
+			<!--<div class="col-md-4 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="600ms">				
 				<div class="text-center">
 					<h4>Photo Gallery</h4>
 					<ul class="sidebar-gallery">
@@ -130,17 +129,20 @@
 				</div>
 			</div>
 			
-			<div class="col-md-4 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="900ms">								
-				<h4>Newsletter Registration</h4>
-				<p>Subscribe today to receive the latest Day news via email. You may unsubscribe from this service at any time</p>
-				<div class="btn-gamp">		
-					<input type="email" class="form-control" id="exampleInputEmail3" placeholder="Enter Email">
-				</div>
-				<div class="btn-gamp">
-					<a type="submit" class="btn btn-default">Subscribe</a>
-				</div>				
-			</div>			
-		</div>	
+			<div class="col-md-4 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="900ms">				
+				<div class="">
+					<h4>Newsletter Registration</h4>
+					<p>Subscribe today to receive the latest Day news via email. You may unsubscribe from this service at any time</p>
+					<div class="btn-gamp">		
+						<input type="email" class="form-control" id="exampleInputEmail3" placeholder="Enter Email">
+					</div>
+					<div class="btn-gamp">
+						<a type="submit" class="btn btn-default">Subscribe</a>
+					</div>
+				
+			</div>
+			
+		</div>	-->
 	</footer>
 	
 	<div class="sub-footer">
