--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
 	<link rel="stylesheet" href="css/animate.css">
 	<link href="css/animate.min.css" rel="stylesheet"> 
 	<link href="css/style.css" rel="stylesheet" />	
-	full { background-color: white; width: 100%; height: 100%; }
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -51,7 +50,7 @@
         </nav><!--/nav-->		
     </header><!--/header-->	
 	<div>
-		<div class="full">
+		<div class= width: 100%; height: 100%;>
 	<img src="roundtableart1.jpg">
 	</div>
 
@@ -141,7 +140,8 @@
 				<div class="col-md-10 col-md-offset-1">
 					<p>Our mission is to provide our clients with innovative, insightful, and impactful services to address business needs. With integrity and efficiency at the forefront of our priorities, we promise to deliver a solution that makes a difference.</p>
 				</div>
-		
+		<br>
+	</br>
 				<div class="col-md-6 col-sm-6 col-xs-6">
 					<div class="btn-gamp"><a href="services.html">Learn More</a></div>
 				</div>
@@ -193,7 +193,7 @@
 			<div class="right-image hidden-xs"></div>
 		</div>
 	</section>
-	
+	<!--
 	<div class="gallery">
 		<div class="text-center">
 			<h2>Gallery</h2>
@@ -259,7 +259,7 @@
 			</div>
 		</div>
 	</div>
-		
+		-->
 	<footer>
 		<div class="container">
 			<div class="col-md-4 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="300ms">
