--- a/services.html
+++ b/services.html
@@ -53,7 +53,7 @@
 	<div class="services">
 		<div class="container">
 			<div class="text-center">
-				<h2>consectetur adipisicing elit</h2>			
+				<h2>Our Services</h2>			
 				<div class="col-md-3 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="300ms">
 					<i class="fa fa-code-fork"></i>
 					<h3>Process Improvement</h3>
@@ -65,12 +65,12 @@
 					<p>The main driver of process efficiency, Lean Six Sigma methodologies are proven to drive down costs, reduce waste, and increase overall productivity. By developing a strict set of KPI’s and process improvement measures, businesses enhance their margins by applying our skill set in this field.</p>
 				</div>
 				<div class="col-md-3 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="900ms">
-					<i class="fa fa-computer"></i>	
+					<i class="fa fa-computer" style="color:blue"></i>	
 					<h3>Custom Software</h3>
 					<p>From idea to fruition, we help guide clients every step of the way in working towards a common goal, custom software delivers solutions for needs and unexplored areas of your business which could benefit from implementation.</p>
 				</div>
 				<div class="col-md-3 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="1200ms">
-					<i class="fa fa-bar-chart"></i>	
+					<i class="fa fa-bar-chart" style="color:black"></i>	
 					<h3>Data Visualization</h3>
 					<p>From data collection to visualization and analysis, we can unearth insights that lead to better decision making and more efficient business strategies. Using tools such as Tableau and Alteryx, we can understand where your business thrives and properly focus those metrics for you.</p>
 				</div>
@@ -79,7 +79,7 @@
 		<div class="text-center">
 			<div class="container">			
 				<div class="col-md-3 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="300ms">
-					<i class="fa fa-address-book"></i>
+					<i class="fa fa-handshake-o" style="color:orange"></i>
 					<h3>Logistics and Supply Chain</h3>
 					<p>Customer fulfillment, shipping, distributors, and supply management can be an intricate and complicated process.  We can handle all aspects of your supply chain so that you can focus on business growth.</p>
 				</div>
@@ -89,7 +89,7 @@
 					<p>Turning hard copies and printed paper into digital form is a non-value added activity. Managing large Excel files that slow down your computer should not be part of your day to day activities. We will handle all electronic document management through organizing and streamlining data and communications flow.</p>
 				</div>
 				<div class="col-md-3 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="900ms">
-					<i class="fa fa-car"></i>	
+					<i class="fa fa-rocket" style="color:black"></i>	
 					<h3>Automation</h3>
 					<p>We have a team of engineers readily available to turn any process done by hand to a process done by machine, which can save you thousands.</p>
 				</div>
