--- a/contact.html
+++ b/contact.html
@@ -50,11 +50,42 @@
         </nav><!--/nav-->		
     </header><!--/header-->	
 	
-	<div class="map">
+	<!--<div class="map">
 		<div class= 
 		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d151730.52936162657!2d-84.10857724137857!3d9.932839053459078!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8fa0e342c50d15c5%3A0xe6746a6a9f11b882!2sSan+Jos%C3%A9+Province%2C+San+Jos%C3%A9%2C+Costa+Rica!5e0!3m2!1sen!2sus!4v1529547780677" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
 	</div>
-	
+-->
+	<meta name="viewport" content="initial-scale=1.0">
+    <meta charset="utf-8">
+    <style>
+      /* Always set the map height explicitly to define the size of the div
+       * element that contains the map. */
+      #map {
+        height: 100%;
+      }
+      /* Optional: Makes the sample page fill the window. */
+      html, body {
+        height: 100%;
+        margin: 0;
+        padding: 0;
+      }
+    </style>
+  </head>
+  <body>
+    <div id="map"></div>
+    <script>
+      var map;
+      function initMap() {
+        map = new google.maps.Map(document.getElementById('map'), {
+          center: {lat: -34.397, lng: 150.644},
+          zoom: 8
+        });
+      }
+    </script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDIphHMJxiB8bQ1okVTmXOnSJoK0Cskndo&callback=initMap"
+    async defer></script>
+  </body>
+	<!--
 	<section class="contact-page">
         <div class="container">
             <div class="text-center">        
@@ -98,6 +129,7 @@
                     </div>
                 </form> 
             </div><!--/.row-->
+
         </div><!--/.container-->
     </section><!--/#contact-page-->
 	
