--- a/index.html
+++ b/index.html
@@ -13,6 +13,16 @@
 	<link rel="stylesheet" href="css/animate.css">
 	<link href="css/animate.min.css" rel="stylesheet"> 
 	<link href="css/style.css" rel="stylesheet" />	
+	<style type="text/css">
+        html, body {
+            height: 100%;
+            margin: 0;
+        }
+
+        #wrapper {
+            min-height: 100%; 
+        }
+    </style>
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -50,7 +60,7 @@
         </nav><!--/nav-->		
     </header><!--/header-->	
 	<div>
-		<div class= width: 100%; height: 100%;>
+		<div id="wrapper">
 	<img src="roundtableart1.jpg">
 	</div>
 
