--- a/contact.html
+++ b/contact.html
@@ -137,18 +137,17 @@
 	<footer>
 		<div class="container">
 			<div class="col-md-4 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="300ms">
-				<h4>About Us</h4>
-				<p>Day is tellus ac cursus commodo, mauesris condime ntum nibh, ut fermentum mas justo sitters.</p>						
+				<h4>Contact Us</h4>					
 				<div class="contact-info">
 					<ul>
-						<li><i class="fa fa-home fa"></i>Suite 54 Elizebth Street, Victoria State Newyork, USA </li>
-						<li><i class="fa fa-phone fa"></i> +38 000 129900</li>
-						<li><i class="fa fa-envelope fa"></i> info@domain.net</li>
+						<li><i class="fa fa-home fa"></i>Boston, MA | San Jose, Costa Rica</li>
+						<li><i class="fa fa-phone fa"></i> +1 617 470 7125</li>
+						<li><i class="fa fa-envelope fa"></i> rrojas@rgbconsultinggroup.com</li>
 					</ul>
 				</div>
 			</div>
-			
-			<div class="col-md-4 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="600ms">				
+		</div>
+			<!--<div class="col-md-4 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="600ms">				
 				<div class="text-center">
 					<h4>Photo Gallery</h4>
 					<ul class="sidebar-gallery">
@@ -162,17 +161,20 @@
 				</div>
 			</div>
 			
-			<div class="col-md-4 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="900ms">								
-				<h4>Newsletter Registration</h4>
-				<p>Subscribe today to receive the latest Day news via email. You may unsubscribe from this service at any time</p>
-				<div class="btn-gamp">		
-					<input type="email" class="form-control" id="exampleInputEmail3" placeholder="Enter Email">
-				</div>
-				<div class="btn-gamp">
-					<a type="submit" class="btn btn-default">Subscribe</a>
-				</div>				
-			</div>			
-		</div>	
+			<div class="col-md-4 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="900ms">				
+				<div class="">
+					<h4>Newsletter Registration</h4>
+					<p>Subscribe today to receive the latest Day news via email. You may unsubscribe from this service at any time</p>
+					<div class="btn-gamp">		
+						<input type="email" class="form-control" id="exampleInputEmail3" placeholder="Enter Email">
+					</div>
+					<div class="btn-gamp">
+						<a type="submit" class="btn btn-default">Subscribe</a>
+					</div>
+				
+			</div>
+			
+		</div>	-->
 	</footer>
 	
 	<div class="sub-footer">
