--- a/index.html
+++ b/index.html
@@ -60,8 +60,13 @@
         </nav><!--/nav-->		
     </header><!--/header-->	
 	<div>
-		<div id="wrapper">
-	<img src="roundtableart1.jpg">
+		<div class="w3-content" style="max-width:2000px;margin-top:46px">
+
+    <!-- Automatic Slideshow Images -->
+    <!-- <div class=""w3-display-container w3-center"">  -->
+
+        <img src="roundtableart1.jpg" style="width:100%">
+    	</div>
 	</div>
 
 	<!--<div class="slider">		
