--- a/services.html
+++ b/services.html
@@ -79,7 +79,7 @@
 		<div class="text-center">
 			<div class="container">			
 				<div class="col-md-3 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="300ms">
-					<i class="fa fa-group" style="font-size:48px;color:red">
+					<i class="fa fa-group" style="font-size:48px;color:red"></i>
 					<h3>Logistics and Supply Chain</h3>
 					<p>Customer fulfillment, shipping, distributors, and supply management can be an intricate and complicated process.  We can handle all aspects of your supply chain so that you can focus on business growth.</p>
 				</div>
