--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         </nav><!--/nav-->		
     </header><!--/header-->	
 	<div>
-		<div class="w3-content" style="max-width:2000px;margin-top:46px">
+		<div class="w3-content" style="max-width:2000px">
 
     <!-- Automatic Slideshow Images -->
     <!-- <div class=""w3-display-container w3-center"">  -->
