--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 		</div><!--/#about-slider-->
 		<!--/#slider-->
 
-	<div class="mission">
+	<div id="mission">
 		<div class="container">
 			<div class="text-center">
 				<h2>Mission Statement </h2>
