--- a/services.html
+++ b/services.html
@@ -65,7 +65,7 @@
 					<p>The main driver of process efficiency, Lean Six Sigma methodologies are proven to drive down costs, reduce waste, and increase overall productivity. By developing a strict set of KPI’s and process improvement measures, businesses enhance their margins by applying our skill set in this field.</p>
 				</div>
 				<div class="col-md-3 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="900ms">
-					<i class="fa fa-computer" style="color:blue"></i>	
+					<i class="fa fa-desktop" aria-hidden="true"></i>
 					<h3>Custom Software</h3>
 					<p>From idea to fruition, we help guide clients every step of the way in working towards a common goal, custom software delivers solutions for needs and unexplored areas of your business which could benefit from implementation.</p>
 				</div>
@@ -84,7 +84,7 @@
 					<p>Customer fulfillment, shipping, distributors, and supply management can be an intricate and complicated process.  We can handle all aspects of your supply chain so that you can focus on business growth.</p>
 				</div>
 				<div class="col-md-3 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="600ms">
-					<i class="fa fa-database"></i>
+					<i class="fa fa-folder"></i>
 					<h3>Electronic Document Management and Transfer</h3>
 					<p>Turning hard copies and printed paper into digital form is a non-value added activity. Managing large Excel files that slow down your computer should not be part of your day to day activities. We will handle all electronic document management through organizing and streamlining data and communications flow.</p>
 				</div>
