--- a/index.html
+++ b/index.html
@@ -13,16 +13,6 @@
 	<link rel="stylesheet" href="css/animate.css">
 	<link href="css/animate.min.css" rel="stylesheet"> 
 	<link href="css/style.css" rel="stylesheet" />	
-	<style type="text/css">
-        html, body {
-            height: 100%;
-            margin: 0;
-        }
-
-        #wrapper {
-            min-height: 100%; 
-        }
-    </style>
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -48,7 +38,7 @@
                 <div class="navbar-collapse collapse">							
 					<div class="menu">
 						<ul class="nav nav-tabs" role="tablist">
-							<li role="presentation"><a href="index.html" class="active">Home</a></li>
+							<li role="presentation"><a href="index.html">Home</a></li>
 							<li role="presentation"><a href="#mission">Mission Statement</a></li>
 							<li role="presentation"><a href="services.html">Services</a></li>
 							<li role="presentation"><a href="about.html">About Us</a></li>
@@ -60,7 +50,7 @@
         </nav><!--/nav-->		
     </header><!--/header-->	
 	<div>
-		<div class="w3-content" style="max-width:2000px">
+		<div class="w3-content" style="max-width:2000px; margin-top:1px">
 
     <!-- Automatic Slideshow Images -->
     <!-- <div class=""w3-display-container w3-center"">  -->
