--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         </nav><!--/nav-->		
     </header><!--/header-->	
 	<div>
-		<div class="w3-content" style="max-width:2000px; margin-top:1px">
+		<div class="w3-content" style="max-width:2000px; max-height:1000px">
 
     <!-- Automatic Slideshow Images -->
     <!-- <div class=""w3-display-container w3-center"">  -->
