--- a/services.html
+++ b/services.html
@@ -70,7 +70,7 @@
 					<p>From idea to fruition, we help guide clients every step of the way in working towards a common goal, custom software delivers solutions for needs and unexplored areas of your business which could benefit from implementation.</p>
 				</div>
 				<div class="col-md-3 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="1200ms">
-					<i class="fa fa-line-chart" aria-hidden="true"></i>
+					<i class="fa fa-area-chart" aria-hidden="true"></i>
 					<h3>Data Visualization</h3>
 					<p>From data collection to visualization and analysis, we can unearth insights that lead to better decision making and more efficient business strategies. Using tools such as Tableau and Alteryx, we can understand where your business thrives and properly focus those metrics for you.</p>
 				</div>
