--- a/about.html
+++ b/about.html
@@ -55,13 +55,15 @@
 			<div class="text-center">
 				<h1>Our Story</h1>
 				<div class="col-md-10 col-md-offset-1">
-					<p>RGB Consulting Group is an engineering and business insight consulting firm concentrated on increasing effectiveness and process improvement through a variety methods. Our initiative is focused on delivering quantifiable solutions for clients which enable superior quality standards for business development and operations. The Group focuses on analytics and results-based projects in order to ensure actionable solutions are developed.</p>
+					<p>RGB Consulting Group is an engineering and business insight consulting firm concentrated on increasing effectiveness and process improvement through a variety methods. Our initiative is focused on delivering quantifiable solutions for clients which enable superior quality standards for business development and operations. The Group focuses on analytics and results-based projects in order to ensure actionable solutions are developed.
+						<br><br></br></br>
+					RGB Consulting Group is a young initiative focused on delivering quantifiable solutions for clients which enable superior quality standards for business development and operations. The Group focuses on analytics and results-based projects in order to ensure proper installment of solutions which adapt to a wide range of industries in North America, focusing on the northeast, and Latin America, focusing on Costa Rica.</p>
 				</div>
 				<br>
 			</br>
 			<br>
 		</br>
-		<p>RGB Consulting Group is a young initiative focused on delivering quantifiable solutions for clients which enable superior quality standards for business development and operations. The Group focuses on analytics and results-based projects in order to ensure proper installment of solutions which adapt to a wide range of industries in North America, focusing on the northeast, and Latin America, focusing on Costa Rica.</p>
+		
 				
 			</div>	
 		</div>			
