--- a/services.html
+++ b/services.html
@@ -89,7 +89,7 @@
 					<p>Turning hard copies and printed paper into digital form is a non-value added activity. Managing large Excel files that slow down your computer should not be part of your day to day activities. We will handle all electronic document management through organizing and streamlining data and communications flow.</p>
 				</div>
 				<div class="col-md-3 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="900ms">
-					<i class="fa fa-rocket" style="color:black"></i>	
+					<i class="fa fa-rocket"></i>	
 					<h3>Automation</h3>
 					<p>We have a team of engineers readily available to turn any process done by hand to a process done by machine, which can save you thousands.</p>
 				</div>
