--- a/contact.html
+++ b/contact.html
@@ -38,7 +38,7 @@
                 <div class="navbar-collapse collapse">							
 					<div class="menu">
 						<ul class="nav nav-tabs" role="tablist">
-							<li role="presentation"><a href="index.html" class="active">Home</a></li>
+							<li role="presentation"><a href="index.html">Home</a></li>
 							<li role="presentation"><a href="mission.html">Mission Statement</a></li>
 							<li role="presentation"><a href="services.html">Services</a></li>
 							<li role="presentation"><a href="about.html">About Us</a></li>
