--- a/services.html
+++ b/services.html
@@ -71,6 +71,9 @@
 				</div>
 				<div class="col-md-3 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="1200ms">
 					<i class="fas fa-chart-line"></i>
+					<i class="fa fa-chart-line"></i>
+					<i class="fas fa-align-left"></i>
+
 					<h3>Data Visualization</h3>
 					<p>From data collection to visualization and analysis, we can unearth insights that lead to better decision making and more efficient business strategies. Using tools such as Tableau and Alteryx, we can understand where your business thrives and properly focus those metrics for you.</p>
 				</div>
