--- a/services.html
+++ b/services.html
@@ -39,7 +39,7 @@
 					<div class="menu">
 						<ul class="nav nav-tabs" role="tablist">
 							<li role="presentation"><a href="index.html">Home</a></li>
-							<li role="presentation"><a href="mission.html">Mission Statement</a></li>
+							<li role="presentation"><a href="index.html/#mission">Mission Statement</a></li>
 							<li role="presentation"><a href="services.html">Services</a></li>
 							<li role="presentation"><a href="about.html">About Us</a></li>
 							<li role="presentation"><a href="contact.html">Contact</a></li>						
@@ -70,8 +70,6 @@
 					<p>From idea to fruition, we help guide clients every step of the way in working towards a common goal, custom software delivers solutions for needs and unexplored areas of your business which could benefit from implementation.</p>
 				</div>
 				<div class="col-md-3 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="1200ms">
-					<i class="fas fa-chart-line"></i>
-					<i class="fa fa-chart-line"></i>
 					<i class="fas fa-align-left"></i>
 
 					<h3>Data Visualization</h3>
