--- a/services.html
+++ b/services.html
@@ -39,7 +39,7 @@
 					<div class="menu">
 						<ul class="nav nav-tabs" role="tablist">
 							<li role="presentation"><a href="index.html">Home</a></li>
-							<li role="presentation"><a href="index.html/#mission">Mission Statement</a></li>
+							<li role="presentation"><a href="#mission">Mission Statement</a></li>
 							<li role="presentation"><a href="services.html">Services</a></li>
 							<li role="presentation"><a href="about.html">About Us</a></li>
 							<li role="presentation"><a href="contact.html">Contact</a></li>						
