--- a/services.html
+++ b/services.html
@@ -22,6 +22,7 @@
   </head>
   <body>	
 	<header id="header">
+        <nav class="navbar navbar-default navbar-static-top" role="banner">
             <div class="container">
                 <div class="navbar-header">
                     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
