--- a/services.html
+++ b/services.html
@@ -19,6 +19,11 @@
     <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
     <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
+    ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+}
   </head>
   <body>	
 	<header id="header">
@@ -173,17 +178,6 @@
 		</div>				
 	</div>
 	
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="js/jquery.js"></script>		
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="js/bootstrap.min.js"></script>	
-	<script src="js/wow.min.js"></script>
-	<script>
-	wow = new WOW(
-	 {
-	
-		}	) 
-		.init();
 	</script>	
   </body>
 </html>
