--- a/index.html
+++ b/index.html
@@ -19,6 +19,15 @@
     <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
     <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-123150229-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-123150229-1');
+</script>
   </head>
   <body>	
 	<header id="header">
@@ -143,7 +152,8 @@
 			<div class="text-center">
 				<h2>Mission Statement </h2>
 				<div class="col-md-10 col-md-offset-1">
-					<p>Our mission is to provide our clients with innovative, insightful, and impactful services to address business needs. With integrity and efficiency at the forefront of our priorities, we promise to deliver a solution that makes a difference.</p>
+					<p>Our mission is to provide our clients with innovative, insightful, and impactful services to address business needs. With integrity and efficiency at the forefront of our priorities, we promise to deliver a solution that makes a difference.
+				</p>
 				</div>
 		<br>
 	</br>
