--- a/services.html
+++ b/services.html
@@ -24,6 +24,15 @@
     margin: 0;
     padding: 0;
 }
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-123150229-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-123150229-1');
+</script>
   </head>
   <body>	
 	<header id="header">
