--- a/contact.html
+++ b/contact.html
@@ -62,11 +62,11 @@
 			<div class="col-md-4 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="300ms">
 				<h4>Contact Us</h4>					
 				<br></br>
-						<li><i class="fa fa-home fa"></i>Boston, MA | San Jose, Costa Rica</li>
+						<h4><i class="fa fa-home fa"></i>Boston, MA | San Jose, Costa Rica></h4>
 					<br></br>	
-						<li><i class="fa fa-phone fa"></i> +1 617 470 7125</li>
+						<h4><i class="fa fa-phone fa"></i> +1 617 470 7125</h4>
 						<br></br>
-						<li><i class="fa fa-envelope fa"></i> rrojas@rgbconsultinggroup.com</li>
+						<h4><i class="fa fa-envelope fa"></i> rrojas@rgbconsultinggroup.com</h4>
 			
 			</div>
 		</div> 
