--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
 			<div class="col-md-3 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="1200ms">
 				<i class="fa fa-gear"></i>	
 				<h3>Easy to Customize</h3>
-				<p>We are experts in tailoring our skills and services to our needs. Whatever tricky situation you may be in, we can find a solution that works for you.</p>
+				<p>We are experts in tailoring our skills and services to your needs. Whatever tricky situation you may be in, we can find a solution that works for you.</p>
 			</div>
 		</div>
 		</div>			
