--- a/services.html
+++ b/services.html
@@ -54,7 +54,7 @@
 						<ul class="nav nav-tabs" role="tablist">
 							<li role="presentation"><a href="index.html">Home</a></li>
 							<li role="presentation"><a href="index.html#mission">Mission Statement</a></li>
-							<li role="presentation"><a href="services.html">Services</a></li>
+							<li role="presentation"><a href="services.html">Business Services</a></li>
 							<li role="presentation"><a href="about.html">About Us</a></li>
 							<li role="presentation"><a href="contact.html">Contact</a></li>						
 						</ul>
@@ -67,7 +67,7 @@
 	<div class="services">
 		<div class="container">
 			<div class="text-center">
-				<h2>Our Services</h2>			
+				<h2>Our Business Services</h2>			
 				<div class="col-md-3 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="300ms">
 					<i class="fa fa-code-fork"></i>
 					<h3>Process Improvement</h3>
