--- a/contact.html
+++ b/contact.html
@@ -48,8 +48,9 @@
 					<div class="menu">
 						<ul class="nav nav-tabs" role="tablist">
 							<li role="presentation"><a href="index.html">Home</a></li>
+							<li role="presentation"><a href="legaloperations.html">Legal Operations</a></li>
 							<li role="presentation"><a href="index.html#mission">Mission Statement</a></li>
-							<li role="presentation"><a href="services.html">Services</a></li>
+							<li role="presentation"><a href="services.html">Business Services</a></li>
 							<li role="presentation"><a href="about.html">About Us</a></li>
 							<li role="presentation"><a href="contact.html">Contact</a></li>						
 						</ul>
