--- a/legaloperations.html
+++ b/legaloperations.html
@@ -64,7 +64,7 @@
       <div class="text-center">
         <h2>Legal Operations </h2>
         <div class="col-md-10 col-md-offset-1">
-          <p>We specialize in making your law firm or in house organization more efficient. Using data analytics and variety of process improvement tools, we will make your operation cost less and do more.
+          <p>We specialize in making your law firm or in house organization more efficient. Using data analytics and variety of process improvement tools, we will make your operation cost less and do more. We use six sigma, lean, and a variety of statistical control methods to make sure that you maximize your time doing legal work. We remove waste and make sure your communication flow is streamlined.
         </p>
         </div>
     <br>
@@ -75,7 +75,7 @@
     <!-- Automatic Slideshow Images -->
     <!-- <div class=""w3-display-container w3-center"">  -->
 
-        <img src="legal_operations.jpg" style="width:100%">
+        <img src="Legal_Operations.jpg" style="width:100%">
       </div>
   </div>
   <div>
@@ -99,7 +99,7 @@
       
       <div class="col-md-4 col-md-offset-4">
         <div class="copyright">
-          &copy; Day 2015 by <a target="_blank" href="http://bootstraptaste.com/" title="Free Twitter Bootstrap WordPress Themes and HTML templates">Bootstrap Themes</a>.All Rights Reserved.
+          &copy; Day 2015 by <a target="_blank" href="http://bootstraptaste.com/" title="Free Twitter Bootstrap WordPress Themes and HTML templates">Bootstrap Themes</a>. All Rights Reserved.
         </div>
                 <!-- 
                     All links in the footer should remain intact. 
