--- a/legaloperations.html
+++ b/legaloperations.html
@@ -75,12 +75,12 @@
     <!-- Automatic Slideshow Images -->
     <!-- <div class=""w3-display-container w3-center"">  -->
 
-        <img src="Legal_Operations.jpg" style="width:100%">
+        <img src="Legal_operations.jpg" style="width:100%">
       </div>
   </div>
   <div>
     <div class="col-md-10 col-md-offset-1">
-          <p>We are so confident in our abilities that we offer the first hour of consulting for free. Email jboyarsky@rgbconsultinggrou.com to set up your free hour!
+          <p>We are so confident in our abilities that we offer the first hour of consulting for free. Email jboyarsky@rgbconsultinggroup.com to set up your free hour!
         </p>
         </div>
 <div class="sub-footer">
