--- a/legaloperations.html
+++ b/legaloperations.html
@@ -75,7 +75,7 @@
     <!-- Automatic Slideshow Images -->
     <!-- <div class=""w3-display-container w3-center"">  -->
 
-        <img src="Legal_operations.jpg" style="width:100%">
+        <img src="Legal_Operations.jpg" style="width:100%">
       </div>
   </div>
   <div>
@@ -83,6 +83,15 @@
           <p>We are so confident in our abilities that we offer the first hour of consulting for free. Email jboyarsky@rgbconsultinggroup.com to set up your free hour!
         </p>
         </div>
+        <br>
+      </br>
+      <br>
+      </br>
+      <br>
+      </br>
+      <br>
+      </br>
+
 <div class="sub-footer">
     <div class="container">
       <div class="social-icon">
