--- a/legaloperations.html
+++ b/legaloperations.html
@@ -62,10 +62,10 @@
     <div id="legaloperations">
     <div class="container">
       <div class="text-center">
-        <h2>Legal Operations </h2>
+        <h1>Legal Operations </h1>
         <div class="col-md-10 col-md-offset-1">
-          <p>We specialize in making your law firm or in house organization more efficient. Using data analytics and variety of process improvement tools, we will make your operation cost less and do more. We use six sigma, lean, and a variety of statistical control methods to make sure that you maximize your time doing legal work. We remove waste and make sure your communication flow is streamlined.
-        </p>
+          <h3>We specialize in making your law firm or in house organization more efficient. Using data analytics and variety of process improvement tools, we will make your operation cost less and do more. We use six sigma, lean, and a variety of statistical control methods to make sure that you maximize your time doing legal work. We remove waste and make sure your communication flow is streamlined.
+        </h3>
         </div>
     <br>
   </br>
@@ -81,10 +81,6 @@
   </br>
       <br>
       </br>
-      <br>
-      </br>
-      <br>
-      </br>
       </br>
       <br>
       </br>
@@ -94,14 +90,10 @@
       </br>
   <div>
     <div class="col-md-14 col-md-offset-1">
-          <p>We are so confident in our abilities that we offer the first hour of consulting for free. Email jboyarsky@rgbconsultinggroup.com to set up your free hour!
-        </p>
+          <h3>We are so confident in our abilities that we offer the first hour of consulting for free. Email jboyarsky@rgbconsultinggroup.com to set up your free hour!
+        </h3>
         </div>
         <br>
-      </br>
-      <br>
-      </br>
-      <br>
       </br>
       <br>
       </br>
