--- a/legaloperations.html
+++ b/legaloperations.html
@@ -62,14 +62,15 @@
     <div id="legaloperations">
     <div class="container">
       <div class="text-center">
-        <h1>Legal Operations </h1>
+        <h2>Legal Operations </h2>
         <div class="col-md-10 col-md-offset-1">
-          <h3>We specialize in making your law firm or in house organization more efficient. Using data analytics and variety of process improvement tools, we will make your operation cost less and do more. We use six sigma, lean, and a variety of statistical control methods to make sure that you maximize your time doing legal work. We remove waste and make sure your communication flow is streamlined.
-        </h3>
+          <p>We specialize in making your law firm or in house organization more efficient. Using data analytics and variety of process improvement tools, we will make your operation cost less and do more. We use six sigma, lean, and a variety of statistical control methods to make sure that you maximize your time doing legal work. We remove waste and make sure your communication flow is streamlined.
+        </p>
         </div>
     <br>
   </br>
     <div>
+      <div class="w3-center">
     <div class="w3-content" style="max-width:800px; max-height:800px">
 
     <!-- Automatic Slideshow Images -->
@@ -78,6 +79,7 @@
         <img src="Legal_Operations.jpg" style="width:100%">
       </div>
   </div>
+</div>
   </br>
       <br>
       </br>
@@ -112,7 +114,7 @@
         </div>
       </div>
       
-      <div class="col-md-4 col-md-offset-4">
+      <div class="col-md-2 col-md-offset-2">
         <div class="copyright">
           &copy; Day 2015 by <a target="_blank" href="http://bootstraptaste.com/" title="Free Twitter Bootstrap WordPress Themes and HTML templates">Bootstrap Themes</a>. All Rights Reserved.
         </div>
