--- a/legaloperations.html
+++ b/legaloperations.html
@@ -70,7 +70,7 @@
     <br>
   </br>
     <div>
-      <div class="w3-center">
+      <div class="col-md-3 col-md-offset-3>
     <div class="w3-content" style="max-width:800px; max-height:800px">
 
     <!-- Automatic Slideshow Images -->
@@ -81,11 +81,6 @@
   </div>
 </div>
   </br>
-      <br>
-      </br>
-      </br>
-      <br>
-      </br>
       <br>
       </br>
       <br>
