--- a/legaloperations.html
+++ b/legaloperations.html
@@ -70,7 +70,7 @@
     <br>
   </br>
     <div>
-      <div class="col-md-3 col-md-offset-3>
+      <div class="col-md-2 col-md-offset-3">
     <div class="w3-content" style="max-width:2500px; max-height:2500px">
 
     <!-- Automatic Slideshow Images -->
