--- a/legaloperations.html
+++ b/legaloperations.html
@@ -70,8 +70,7 @@
     <br>
   </br>
     <div>
-      <div class="col-md-2 col-md-offset-3">
-    <div class="w3-content" style="max-width:2500px; max-height:2500px">
+      <div class="w3-center">
 
     <!-- Automatic Slideshow Images -->
     <!-- <div class=""w3-display-container w3-center"">  -->
@@ -79,8 +78,12 @@
         <img src="Legal_Operations.jpg" style="width:100%">
       </div>
   </div>
-</div>
   </br>
+      <br>
+      </br>
+      </br>
+      <br>
+      </br>
       <br>
       </br>
       <br>
