--- a/about.html
+++ b/about.html
@@ -48,7 +48,7 @@
 					<div class="menu">
 						<ul class="nav nav-tabs" role="tablist">
 							<li role="presentation"><a href="index.html" class="active">Home</a></li>
-							<li role="presentation"><a href="legaloperations.html">Legal Operations</a></li>
+						    <li role="presentation"><a href="legaloperations.html">Litigation Investing</a></li>
 							<li role="presentation"><a href="index.html#mission">Mission Statement</a></li>
 							<li role="presentation"><a href="services.html">Business Services</a></li>
 							<li role="presentation"><a href="about.html">About Us</a></li>
